<resources>
    <string name="app_name">Google Book List Explorer</string>
    <string name="type_search_key">Type Search Key</string>
    <string name="search">Search</string>
    <string name="title">Title:</string>
    <string name="author">Author:</string>
    <string name="language">Language:</string>
    <string name="description">Description:</string>
    <string name="book_image">book image</string>
    <string name="boy_reading_a_book">boy reading a book</string>
</resources>
